# bowl

./: CMakeLists.txt  LICENSE  README.md
example/: example.cpp
include/bowl/: error.hpp  exception.hpp  expected.hpp  macros.hpp  maybe_error.hpp  unexpected.hpp
src/: error.cpp
tests/: test.cpp
